<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.programmingquizapp.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/Title"
            style="@style/title" />

        <TextView
            style="@style/question"
            android:text="@string/question_1" />

        <EditText
            android:id="@+id/question_1_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_1_answer"
            android:textSize="@dimen/EditText_test_size" />

        <TextView
            style="@style/question"
            android:paddingBottom="@dimen/padding_down"
            android:text="@string/question_2" />

        <CheckBox
            android:id="@+id/question_2_value_A"
            style="@style/checkBox_or_radio_button"
            android:text="@string/question_2_answer_1" />

        <CheckBox
            android:id="@+id/question_2_value_char"
            style="@style/checkBox_or_radio_button"
            android:text="@string/question_2_answer_2" />

        <CheckBox
            android:id="@+id/question_2_value_2"
            style="@style/checkBox_or_radio_button"
            android:text="@string/question_2_answer_3" />

        <CheckBox
            android:id="@+id/question_2_value_45"
            style="@style/checkBox_or_radio_button"
            android:text="@string/question_2_answer_4" />

        <TextView
            style="@style/question"
            android:paddingBottom="@dimen/padding_down"
            android:text="@string/question_3" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                style="@style/checkBox_or_radio_button"
                android:text="@string/question_3_answer_1" />

            <RadioButton
                android:id="@+id/question_3_value_write"
                style="@style/checkBox_or_radio_button"
                android:text="@string/question_3_answer_2" />

            <RadioButton
                style="@style/checkBox_or_radio_button"
                android:text="@string/question_3_answer_3" />
        </RadioGroup>

        <TextView
            style="@style/question"
            android:paddingBottom="@dimen/padding_down"
            android:text="@string/question_4" />

        <CheckBox
            android:id="@+id/question_4_value_String"
            style="@style/checkBox_or_radio_button"
            android:text="@string/question_4_answer_1" />

        <CheckBox
            android:id="@+id/question_4_value_100"
            style="@style/checkBox_or_radio_button"
            android:text="@string/question_4_answer_2" />

        <CheckBox
            android:id="@+id/question_4_value_299.01"
            style="@style/checkBox_or_radio_button"
            android:text="@string/question_4_answer_3" />

        <CheckBox
            android:id="@+id/question_4_value_one_two_three"
            style="@style/checkBox_or_radio_button"
            android:text="@string/question_4_answer_4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:onClick="showScore"
            android:layout_marginTop="18dp"/>
    </LinearLayout>
</ScrollView>